2010-05-xx:
    * version 0.7.8
    * Remove compatibility with Firefox 3.0
    * Fix QuickPost on Brilliant
    * Fix bug with topic and post matching highlighting groups
    * Update GFPastel 2010
    * Add compatibility with Firefox 4.0
    * Add topic pages to context menu on message lists
    * New highlighting interface

2010-05-12:
    * version 0.7.7
    * Fix QuickPost with "go back to same page" option
    * Fix board-specific signatures

2010-05-09:
    * version 0.7.6
    * Update GFPastel 2010
    * Fix last post and pagination links
    * Fix tagging and tracking features
    * Fix topic closing and post and topic deletion
    * Fix quoting and highlighting of mods and admins
    * Fix message link icons CSS
    * Fix board links on the tracked topics page

2010-05-05:
    * version 0.7.5
    * Replace SpotFAQs with a smaller CSS that complements the SpotFAQs skin
      on GameFAQs (SpotFAQs extras)
    * Link post number in quote headers to the quoted post
    * New CSS: GFPastel 2010
    * Fix highlighting group priority
    * Fix some stuff that broke when the URLs changed

2009-11-14:
    * version 0.7.4
    * Drop Firefox 2 compatibility
    * Custom date formats
    * New CSS: SpotFAQs
    * Improve the GameFAQs clock and add it to the options window
    * New CSS: 8for11
    * Different icons for the sidebar and options toolbar buttons
    * Replace the favorites drop down menu in the sidebar with a list box
    * Add "Show Category List" board setting
    * Remove inline code tags (block level code is still there)
    * Compatibility with Firefox 3.6 and SeaMonkey 2.0

2009-07-02:
    * version 0.7.3
    * Fix topic QuickPost when GameFAQs' main stylesheets are disabled
    * Fix QuickPost buttons not appearing under some circumstances
    * Change how descriptions in the Style pane of the options window are presented
      (now shown in a dialog box when enabling or from right click -> About)