@@ -7,6 +7,7 @@
     * Add compatibility with Firefox 4.0
     * Add topic pages to context menu on message lists
     * New highlighting interface
+    * Add ability to highlight all admins, mods or VIPs
 
 2010-05-12:
     * version 0.7.7
